--- a/q/273940.html
+++ b/q/273940.html
@@ -26,21 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>347</td><td>Ruby</td><td>240718T205827Z</td><td><a href="https://codegolf.stackexchange.com/questions/273940/plot-the-ground-path-of-a-satellite/274250#274250">Level Ri</a></td></tr>
+<tr d-ix="0"><td>345</td><td>Ruby</td><td>240718T205827Z</td><td><a href="https://codegolf.stackexchange.com/questions/273940/plot-the-ground-path-of-a-satellite/274250#274250">Level Ri</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>322</s> 347 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, ungolfed version <s>322 347</s> 345 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;e,a,i,w,u,l,t{s=&quot;&lt;svg viewBox='0-90 358 180'style='background:tan'&gt;&quot;
-k=v=d=0.01
+v=d=0.01
 (r=(a-a*e*e)/(1+e*Math.cos(v+=d))
 t+=r*r/(u*(a-a*e*e))**0.5*d
 x,q=(1i**((v+w)/n=1i.arg)).rect
 y,z=(q*1i**(i/n)).rect
 s&lt;&lt;&quot;&lt;circle r='1'cx='#{(j=((-x-y*1i).arg-t/l*n*=4)%n*57).round(1)}'cy='#{(Math.asin(z)*-57).round(1)}'/&gt;&quot;
-v&gt;2*d||k=j)until v%6.29&lt;d&amp;&amp;(j-k).abs&lt;20
+v&gt;2*d||K=j)until v%6.29&lt;d&amp;&amp;(j-K).abs&lt;20
 s}
 </code></pre>
-<p><a href="https://tio.run/##dZLNbuMgFIX3fgqUqDUm2Ab/xqOQxeznCUZdEExSJymeAnaS/jx7it1JlbbqBqF7vnPuvQjdrU7nNTuHS4k5bvABd3iP7bNhk4XpN6Bv5OF3e2Q@CSsC0nwO6Jz4xp72kvkrLnYb3Xaq/mW58pcTb8d6VjMSEepBzSAPOZJIBjGkM4n@cHsfidbAfsbqIPDsjGmkY9ihDzBAiEQ5qr0jfmSQNghBRx@CWDHaRFxvgiDSUljvhJ8YfEQj0cTqUjaLxWQhGi32EmjmU1@40afPcMsgDI/hyRmCISa08R4pxLLgRqG8dO5hC0iDV1@cRsc4LDeNgk8BCj8jsdu0XyaofnnZsW3QKdvsQX9TREm1qG9v4TbcuS4rs0iIZ17PguWlk9zbTUWreqlN0yqw5sK2GtRyo6U0wLZA87rhynjetFOifXiQygLJxT2w0lgguJEj1Slv@q@zBqz/kqhMS5wUeZ5GBIMijbJY4KQk7gRpNS8IGerzghaZu9CKZmVE7q78FGeJEzGggyf5wUg@m1zSoFYDPXJpFeUYJD@S5F25gPQCfnD5O5d/SaTfE8scD30ATQfWfcZh4rIaSyOdX9P/4ewbOzRMvqDZ8ITX5Lx0S7nMO887vwE" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##dZLNbuMgFIX3fgrUqDUm2Ab/xiOTxWyreYJRFwST1JkUTwE7SX@ePYPdSZW26gahe75z7r0I3a@OpzU7hUuJOW7xHvd4h@2zYVe1GTZgaOX@Z3dgPgkrAtJ8AeiC@MYed5L5Ky7@bHTXq@aH5cpfXnkDaxiJCPWgZpCHHEkkgxjSuUS/uL2PRGfgMGdNEHh2zjTSMezROxggRKIcNd4BPzJIW4Sgo/dBrBhtI643QRBpKax3xE8MPqKJaGN1Lpu6vqpFq8VOAs186gs3@OwZbhmE4SE8OkMwxoQ23iGFWBZcK5SXzj3uAGnw6ovj5JiG5aZV8ClA4UckHvdcJqh5ebll26BXtt2B4bqIkqpubm7gNrx1XVamTohnXk@C5aWT3MvNRKcGqU3bKbDmwnYaNHKjpTTAdkDzpuXKeN6sV6J7eJDKAsnFPbDSWCC4kRPVK2/2t7cGrH@TqExLnBR5nkYEgyKNsljgpCTuBGm1KAgZ64uCFpm70IpmZUTuLvwUZ4kTMaCjJ/nGSD6aXNKoViM9cWkV5Rgk35LkTTmD9Ay@c/kbl39KpF8TyxyPfQBNR9Z9xXHisppKE51f0v/h7As7Nkw@odn4hJfkonRLucw7zzv9Aw" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 <p>A function returning an SVG image.</p>
 <p>Byte count of code has increased to fully comply with OP requirement for simulation time while still providing a function that will terminate.</p>
 <p>TIO.run will run up to 6 orbits without exceeding the output byte count (though newlines had to be deleted from output to make this fit.) This is enough to run any of the test cases including the last one. The Javascript editor built into this website will display any of the test cases in edit mode, but the byte limit for publication is about 3 orbits worth of data. Rounding will be removed in the golfed version, which will increase the size of the output.</p>
@@ -74,9 +74,9 @@ s}
      k = longitude of 1st point plotted
 </pre>    
 <p><strong>Step 1: Initialise</strong></p>
-<p>Initialise <code>s</code> with an SVG header, and set <code>d</code> and <code>v</code> to the step size. Step size is 0.01 radians. The Ruby preprocessor likes to be sure that a variable will be initialised before it is used and does not like the fact that <code>k</code> is only assigned in a conditional. Therefore we conveniently initialise <code>k</code> to the same value as <code>d</code> to avoid an error. We open a bracket to start looping.</p>
+<p>Initialise <code>s</code> with an SVG header, and set <code>d</code> and <code>v</code> to the step size. Step size is 0.01 radians. We open a bracket to start looping.</p>
 <pre class="lang-ruby prettyprint-override"><code>s=&quot;&lt;svg viewBox='0-90 358 180'style='background:tan'&gt;&quot;
-k=v=d=0.01
+v=d=0.01
 (
 </code></pre>
 <p><strong>Step 2: calculate true anomaly and time</strong></p>
@@ -106,14 +106,17 @@ k=v=d=0.01
 <p><strong>Step 5: decide when to stop iterating and return</strong></p>
 <p>Assuming the orbital period and day length are both integers (or have a rational ratio), the track of the satellite will repeat after the lowest common multiple of the orbital period and day length. In practice this ratio may not be perfect. The code keeps track of the longitude of the satellite at the start of the first and current orbit, and if it falls within a margin, it stops iterating and returns. The margin is set to 20 degrees (corresponding to a maximum of 18 orbits) but can be altered if desired.</p>
 <ul>
-<li>Record the longitude at the start of the 1st orbit: <code>v&gt;2*d||k=j</code></li>
-<li>Keep iterating until the start of an orbit where the longitude is within 20 degrees fo the 1st orbit: <code>)until v%6.29&lt;d&amp;&amp;(j-k).abs&lt;20</code></li>
-<li>Return from function with SVG image in string <code>s}</code></li>
-</ul>
-<p>On the 1st iteration,</p>
-<pre class="lang-ruby prettyprint-override"><code>  v&gt;2*d||k=j)until v%6.29&lt;d&amp;&amp;(j-k).abs&lt;20
-  s}
+<li><p>Record the longitude on the 1st iteration (at the start of the 1st orbit): <code>v&gt;2*d||K=j</code></p>
+</li>
+<li><p>Keep iterating until the start of an orbit where the longitude is within 20 degrees of the 1st orbit: <code>)until v%6.29&lt;d&amp;&amp;(j-K).abs&lt;20</code></p>
+</li>
+<li><p>Return from function with SVG image in string <code>s}</code></p>
+<pre class="lang-ruby prettyprint-override"><code>v&gt;2*d||K=j)until v%6.29&lt;d&amp;&amp;(j-K).abs&lt;20
+s}
 </code></pre>
+</li>
+</ul>
+<p>Note the use of uppercase <code>K</code> here. The Ruby preprocessor likes to know that all variables will be assigned before they are used, and if lowercase <code>k</code> is used it insists that <code>k</code> be initialised outside the loop to guarantee it will be assigned before it is used, as the assignment in the code shown occurs in a conditional. 2 bytes were saved by switching to uppercase <code>K</code> which represents a constant, since the preprocessor does not check constants in the same way and the assignment can be avoided.</p>
 <p><strong>Sample output</strong></p>
 <p>Below is output for test case 5. It is recommended to hit <code>run code snippet</code> before expanding, to avoid getting a horizontally wide but vertically very short window requiring excessive vertical scrolling. It seems the plot is autosized based on the width only, so narrowing the browser window can help eliminate vertical scrolling.</p>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
