--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240722T012045Z
+"   /golfscore                                      20240722T014634Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/114883.html">I give you Nth permutation you give me N        : 0114883</a>
 <a href="q/274209.html">Wait ASCII was 128 characters all along?        : 0274209</a>
 <a href="q/243173.html">Is it a tower permutation?                      : 0243173</a>
 <a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
