--- a/q/90349.html
+++ b/q/90349.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>036</td><td>R</td><td>240607T211733Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/273516#273516">int 21h </a></td></tr>
-<tr d-ix="1"><td>035</td><td>Setanta 0.3.3</td><td>240720T231047Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/274303#274303">bb94</a></td></tr>
-<tr d-ix="2"><td>007</td><td>Kotlin</td><td>240721T011343Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/274305#274305">Barry Fr</a></td></tr>
+<tr d-ix="0"><td>007</td><td>Kotlin</td><td>240721T011343Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/274305#274305">Barry Fr</a></td></tr>
+<tr d-ix="1"><td>036</td><td>R</td><td>240607T211733Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/273516#273516">int 21h </a></td></tr>
+<tr d-ix="2"><td>035</td><td>Setanta 0.3.3</td><td>240720T231047Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/274303#274303">bb94</a></td></tr>
 <tr d-ix="3"><td>023</td><td>JavaScript Node.js</td><td>240718T044350Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/274231#274231">Andrew B</a></td></tr>
 <tr d-ix="4"><td>012</td><td>YASEPL</td><td>240208T203927Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/269917#269917">madeforl</a></td></tr>
 <tr d-ix="5"><td>025</td><td>Google Sheets</td><td>240128T001249Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/269588#269588">z..</a></td></tr>
@@ -249,7 +249,11 @@
 <tr d-ix="220"><td>002</td><td>Pyth</td><td>160819T215825Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/90355#90355">Dennis</a></td></tr>
 <tr d-ix="221"><td>003</td><td>CJam</td><td>160819T215242Z</td><td><a href="https://codegolf.stackexchange.com/questions/90349/the-letter-a-without-a/90350#90350">Dennis</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>37</s> 36 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a>, 7 bytes</h1>
+<p><code>{'C'-2}</code></p>
+<p><a href="https://pl.kotl.in/W4Ch3tqtA" rel="nofollow noreferrer">Try it!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>37</s> 36 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>write(el(strsplit(c(F,&quot;&quot;),&quot;&quot;))[2],2)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m72waMGCpaUlaboWN1XKizJLUjVSczSKS4qKC3IySzSSNdx0lJQ0QVgz2ihWx0gTohaqBaYVAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -262,15 +266,11 @@
 This outputs a lowercase <span class="math-container">\$a\$</span>.</p>
 <p>The expession <code>F/F</code> (a replacement for <code>0/0</code>) produces <code>NaN</code> (&quot;not a number&quot;), which is converted to a string, both &quot;N&quot;'s are removed and the rest is output.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a> 0.3.3, <s>64</s> <s>60</s> 35 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a> 0.3.3, <s>64</s> <s>60</s> 35 bytes</h1>
 <p>Unfortunately, this challenge is impossible in the current version of Setanta. There is no equivalent to <code>ord</code>, so you have to get the <code>a</code> from the string representation of some object. However, this requires either <code>go_téacs</code> (equivalent of <code>toString</code>) or <code>nasc</code> (equivalent of <code>join</code>), both of which contain an <code>a</code> – <code>&quot;&quot; + obj</code> doesn’t work. However, before Setanta 0.4.0, <a href="https://github.com/EoinDavey/Setanta/blob/master/CHANGELOG.md#breaking-changes" rel="nofollow noreferrer"><code>go_téacs</code> was called <code>go_lit</code></a>, making it possible to complete the challenge.</p>
 <p>The solution gets the <code>a</code> from <code>neamhní</code> (<code>undefined</code>).</p>
 <pre><code>gniomh b(){}scriobh(go_lit(b())[2])
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://kotlinlang.org" rel="nofollow noreferrer">Kotlin</a>, 7 bytes</h1>
-<p><code>{'c'-2}</code></p>
-<p><a href="https://play.kotlinlang.org" rel="nofollow noreferrer">Try it!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 23 bytes</h1>
 
