--- a/q/274288.html
+++ b/q/274288.html
@@ -43,7 +43,7 @@ def g(x):
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=ZVKxjpwwFKyXr3hNJJs1rJ-NbUxEQbHFNvcDiILTmY2lXUAsSJsU-ZE01yT_lB9JGcUsd1Kka57t0Whm3sg_fo1f5y9D__r6c5m7JP_998V18ERGdqJFtKvKsS6az5fy4npS0WjXDRN48D1MbX92BNmFFlXtm6QMM8HmcPrAeWMcylP83Ue7yc3L1NfHYJEquj-SiiXhchDNvoqO5aW9Pr-00LF7cVuupI3vcezhIcnaVdT1y9VN7exIR2m0pj2T-5q1K2ts9jVvYsE_hPD9HFi06Mon0jG_x2D5ngWOAbp_wjXGWwt_fD8u8w1KqJEBppKBSC2DLBUMVKoYGAZ5Ew3L_B-Pp0YaLZWRSkmhuF0hrmxucsRwaGm4eWBcWKMyk5ncqhyV2EDOc80x14gouELUwSM1mdLa2iBopRUuCQIyFVJwbSXPhNDIXRKibBXBsO78zY9k2yAAW8S1oXFaazgTTwPMoH2-PR6QwEDhEMa2_ftf-Ac" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p><code>g(x)</code> computes the Dickman function <span class="math-container">\$ \rho(x) \$</span> with relative error under <code>5e-7</code> for up to <code>x &lt;= 8</code>.</p>
-<p>Instead of a continuous function <span class="math-container">\$ \rho(x) \$</span>, let's define a sequence of functions <span class="math-container">\$f_0(x), f_1(x), f_2(x), \cdots\$</span> which are defined on the interval <span class="math-container">\$-\frac{1}{2} \le x \le \frac{1}{2}\$</span>:</p>
+<p>Instead of a single continuous function <span class="math-container">\$ \rho(x) \$</span>, let's define a sequence of functions <span class="math-container">\$f_0(x), f_1(x), f_2(x), \cdots\$</span> which are defined on the interval <span class="math-container">\$-\frac{1}{2} \le x \le \frac{1}{2}\$</span>:</p>
 <ul>
 <li><span class="math-container">\$f_0(x) = 1\$</span>.</li>
 <li><span class="math-container">\$(x + \frac{3}{2}) f_1'(x) + f_0(x) = 0\$</span>.</li>
