--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240722T075406Z
+"   /golfscore                                      20240722T081507Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/1294.html">Determine whether strings are anagrams          : 0001294</a>
 <a href="q/274288.html">Compute Dickman                                 : 0274288</a>
 <a href="q/58615.html">1 2 Fizz 4 Buzz                                 : 0058615</a>
 <a href="q/90349.html">The Letter A without A                          : 0090349</a>
