--- a/q/1294.html
+++ b/q/1294.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>039</td><td>R</td><td>240722T081507Z</td><td><a href="https://codegolf.stackexchange.com/questions/1294/determine-whether-strings-are-anagrams/274317#274317">pajonk</a></td></tr>
+<tr d-ix="0"><td>036</td><td>R</td><td>240722T081507Z</td><td><a href="https://codegolf.stackexchange.com/questions/1294/determine-whether-strings-are-anagrams/274317#274317">pajonk</a></td></tr>
 <tr d-ix="1"><td>030</td><td>Swift 5.9</td><td>240315T005424Z</td><td><a href="https://codegolf.stackexchange.com/questions/1294/determine-whether-strings-are-anagrams/271825#271825">macOSist</a></td></tr>
 <tr d-ix="2"><td>077</td><td>YASEPL</td><td>240209T214157Z</td><td><a href="https://codegolf.stackexchange.com/questions/1294/determine-whether-strings-are-anagrams/269953#269953">madeforl</a></td></tr>
 <tr d-ix="3"><td>005</td><td>APLNARS</td><td>240208T162136Z</td><td><a href="https://codegolf.stackexchange.com/questions/1294/determine-whether-strings-are-anagrams/269906#269906">Rosario</a></td></tr>
@@ -191,11 +191,11 @@
 <tr d-ix="162"><td>003</td><td>Golfscript</td><td>110308T173049Z</td><td><a href="https://codegolf.stackexchange.com/questions/1294/determine-whether-strings-are-anagrams/1306#1306">YOU</a></td></tr>
 <tr d-ix="163"><td>008</td><td>J</td><td>110308T155017Z</td><td><a href="https://codegolf.stackexchange.com/questions/1294/determine-whether-strings-are-anagrams/1296#1296">J B</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>45</s> 39 bytes</h1>
-<p><em>Edit: -6 bytes thanks to <a href="https://codegolf.stackexchange.com/users/95126/dominic-van-essen">@Dominic van Essen</a>.</em></p>
-<pre class="lang-r prettyprint-override"><code>\(x,y,`?`=\(a)table(a))identical(?x,?y)
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, <s>45</s> <s>39</s> 36 bytes</h1>
+<p><em>Edit: -9 bytes thanks to <a href="https://codegolf.stackexchange.com/users/95126/dominic-van-essen">@Dominic van Essen</a>.</em></p>
+<pre class="lang-r prettyprint-override"><code>\(x,y)identical(table(x),table(x=y))
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=dZDBCsIwDEDx6lds9WAL9S7C2I_s0FRbGBQtawdrf8XLFPwo_RpHsyHbMJeEvJeQ9v5o-qcuXq3Xh-N7X9GOBy5KUVQUmAdp1JBZfVFXX5_B0LLjZWCofzYnkYusyCrqmDLU-cZZU3vqOCGMbTXNibyBJzwbC7YbbN-0KjF_A_mPDQjnkjRnkAAAtjUYh_0YYyJxjBUPIcRJwjKGxW5nlLIhGTYo45Y7LKLlRdND5Ooo-LEZxC_se8xf" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=dZBBCsIwEEVx6yna6CKBuBehN3HRiSZQCDY0U-jkKm6q4KH0NJakRdpiNvnMexlmcn80_dMUrxbN4fjen3knSVRXfcPqApYjKKt5J-QYChIiuZ_NqczLrMjO3AttucfGO1sh95IxIbaG50zVgExmYxC7wcam1ZFhDeofG1B6F6U5gwgAUtmA9akeQogkjGfFiShMUoqBFr291dpRNBxp65c9XELLiaZF1Goo-LEZTF_Y9-n-Ag" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Takes input as two character vectors.</p>
 </div>
 <div id="pu1" class="pu"><h1>Swift 5.9, 30 bytes</h1>
