--- a/q/274288.html
+++ b/q/274288.html
@@ -26,19 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>058</td><td>JavaScript Node.js</td><td>240722T084413Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274319#274319">l4m2</a></td></tr>
-<tr d-ix="1"><td>254</td><td>Python</td><td>240722T035101Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274316#274316">Bubbler</a></td></tr>
+<tr d-ix="0"><td>254</td><td>Python</td><td>240722T035101Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274316#274316">Bubbler</a></td></tr>
+<tr d-ix="1"><td>058</td><td>JavaScript Node.js</td><td>240722T084413Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274319#274319">l4m2</a></td></tr>
 <tr d-ix="2"><td>026</td><td>Charcoal</td><td>240720T070451Z</td><td><a href="https://codegolf.stackexchange.com/questions/274288/compute-dickman/274293#274293">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
-
-<pre class="lang-javascript prettyprint-override"><code>f=x=&gt;f[x*1e6|0]
-for(i=0;i&lt;9e6;)f[1+i]=f[i]-f[i-1e6]/i++||1
-</code></pre>
-<p><a href="https://tio.run/##ZcpBDoIwEEDRPSfp2HSkKCjBepGmC4IdM4ZQAsSw6N0rW9PNX7z8T//t12HheVNTePmUyOzmSXY/ad/E0hUUFsGm7PjR@qYDslqyM2TZqSPquNyZpYxRpyFMaxg9juEtSNwBin@5ZVJjndkVq8wqbDPTeMkNIP0A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Delta matters lol</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 254 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 254 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>def N(p,I):
 &#9;A=p[:];l=len(A)
 &#9;for i in range(1,l):A[i]-=A[i-1]/I
@@ -77,7 +69,15 @@ def g(x):
 <p>Integration is also easy: since integration of <code>x^n</code> is <code>x^(n+1)/(n+1)</code>, we can divide each term with its 1-based index and prepend a constant term.</p>
 <p>The constant term is simply <span class="math-container">\$f_{i-1}(\frac{1}{2}) - f_{i}(-\frac{1}{2})\$</span> where <span class="math-container">\$f_i\$</span> is evaluated without the constant term.</p>
 <p><code>E(f,x)</code> evaluates the polynomial <code>f</code> at <code>x</code>. <code>N(p,i)</code> takes the series for <span class="math-container">\$f_i\$</span> and the value of <span class="math-container">\$i+1.5\$</span> to compute the series for <span class="math-container">\$f_{i+1}\$</span>. <code>g(x)</code> finds the appropriate function for the interval that <code>x</code> belongs to, and then evaluates the function at <code>x</code> offset by an appropriate amount.</p>
-<p>I had to read a few papers cited on the Wikipedia page to get the idea, but computing with the idea turned to be not that complex, yet surprisingly efficient and accurate. I intentionally didn't golf the program hard to keep the intents relatively clear, in the hopes that others can port this without too much problem.</p>
+<p>I had to read a few papers cited on the Wikipedia page to get the idea, but computing with the idea turned out to be not that complex, yet surprisingly efficient and accurate. I intentionally didn't golf the program hard to keep the intents relatively clear, in the hopes that others can port this without too much problem.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 58 bytes</h1>
+
+<pre class="lang-javascript prettyprint-override"><code>f=x=&gt;f[x*1e6|0]
+for(i=0;i&lt;9e6;)f[1+i]=f[i]-f[i-1e6]/i++||1
+</code></pre>
+<p><a href="https://tio.run/##ZcpBDoIwEEDRPSfp2HSkKCjBepGmC4IdM4ZQAsSw6N0rW9PNX7z8T//t12HheVNTePmUyOzmSXY/ad/E0hUUFsGm7PjR@qYDslqyM2TZqSPquNyZpYxRpyFMaxg9juEtSNwBin@5ZVJjndkVq8wqbDPTeMkNIP0A" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p>Delta matters lol</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 26 bytes</h1>
 <pre><code>≧×⁸φＦ×Ｎφ⊞υ∨‹ιφ⁻⌊υ∕§υ±φιＩ⊟υ
