--- a/q/274322.html
+++ b/q/274322.html
@@ -26,9 +26,16 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>049</td><td>JCram</td><td>240722T120018Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274323#274323">Kamila S</a></td></tr>
+<tr d-ix="0"><td>139</td><td>Python 3.8 prerelease</td><td>240722T121011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274324#274324">squarero</a></td></tr>
+<tr d-ix="1"><td>049</td><td>JCram</td><td>240722T120018Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274323#274323">Kamila S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 49 bytes (SBCS)</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 139 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>lambda x:x.translate(''.join(chr(i+10208)for i in b'NOPQSWXY[\\^~~~~~~!#)91+;3*:%\'-=5/?7.&gt;EGZM]U_~~~,T&quot;&amp;2RB6VF4~~~~~~~ $(08&lt;@ACDHIJKL'*2))
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM7YoKPqfZBvzPycxNyklUaHCqkKvpCgxrzgnsSRVQ11dLys/M08jOaNII1Pb0MDIwEIzLb9IIVMhM08hSd3PPyAwODwiMjomJq4ODBSVNS0Nta2NtaxUY9R1bU317c317Fzdo3xjQ@OB0johSmpGQU5mYW4mEPV1CioaBhY2Do7OLh6eXt4@6lpGmpr//wMA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 49 bytes (SBCS)</h1>
 <pre><code>⁸?∣⊑⍹○Ⓑ⏛⍁MQ⍙ⓁA∑Y⍢⍎⍬A∫y:⊒≤⍏CG⍞ⓋC⍎⍮f⁷³⍬¹e⍝S⍶³⍟Ⓜ⍳⌼δ①
 </code></pre>
 <p>Ungolfed Node.js code:</p>
