--- a/q/274322.html
+++ b/q/274322.html
@@ -26,16 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>139</td><td>Python 3.8 prerelease</td><td>240722T121011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274324#274324">squarero</a></td></tr>
-<tr d-ix="1"><td>049</td><td>JCram</td><td>240722T120018Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274323#274323">Kamila S</a></td></tr>
+<tr d-ix="0"><td>086</td><td>JavaScript Node.js</td><td>240722T131407Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274326#274326">Arnauld</a></td></tr>
+<tr d-ix="1"><td>139</td><td>Python 3.8 prerelease</td><td>240722T121011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274324#274324">squarero</a></td></tr>
+<tr d-ix="2"><td>049</td><td>JCram</td><td>240722T120018Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274323#274323">Kamila S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 139 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 86 bytes</h1>
+<p>Didn't look for any hidden logic in the mapping. So this is just using a lookup table for now.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>c=&gt;(B=Buffer)([226,160,B(`7.&gt;EGZM]U,T&quot;&amp;2RB6VF4?!#)91+;3*:%'-=5/?`)[B(c)[0]%38]+96])+&quot;&quot;
+</code></pre>
+<p><a href="https://tio.run/##JdLPTtRQFAbw/TzF9RJsy5Rh/kBhZtKZpAm6MiREWThpQiktwzDOxbagSFgAQaOgRP4GEDUk6IoNAWNIeJl5AR9h7Me3ufnd75yzOqflLXuxH80vJoMdNRv0Qrvn2zXdsZ2lMAwiQ28Ui5ZZsPKmo0@P5mrjT18@c1@Yz@Xj4qRjTT0Zrj/qM8qFbLU0UOnXBu2Rofq00XB032jk3f7SmJstW66RlbLnq06cCCVssSo9WRGy@3NdmkLO0JuwT3@EZ@kTOKC/wiG9nVrIOX7OUGjS@/A8/Qlu0afwAr0Ft@kP8Cv6M9yhz2FFH8KL9C78mv4BR/QxHNNf4IT@Di/Rl/Ay/Rt@Q9/Bb@kreIW@h9/Rt3CevoEL9AZcpN/DJXoPHqav4RH6ArboI3iU/gOP0b/gMn0AD9E7cq2ayUzMtAI/yS0EK7GujFyoonHPb@p@04uEXROrGSHaQSKiIE6XHT7kRjUNcQGqHeTaau4hNNFiss8WqoHMFXWh/fu72/12kL6aqAite76jpfNrRu8/" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 139 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda x:x.translate(''.join(chr(i+10208)for i in b'NOPQSWXY[\\^~~~~~~!#)91+;3*:%\'-=5/?7.&gt;EGZM]U_~~~,T&quot;&amp;2RB6VF4~~~~~~~ $(08&lt;@ACDHIJKL'*2))
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM7YoKPqfZBvzPycxNyklUaHCqkKvpCgxrzgnsSRVQ11dLys/M08jOaNII1Pb0MDIwEIzLb9IIVMhM08hSd3PPyAwODwiMjomJq4ODBSVNS0Nta2NtaxUY9R1bU317c317Fzdo3xjQ@OB0johSmpGQU5mYW4mEPV1CioaBhY2Do7OLh6eXt4@6lpGmpr//wMA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 49 bytes (SBCS)</h1>
+<div id="pu2" class="pu"><h1><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 49 bytes (SBCS)</h1>
 <pre><code>⁸?∣⊑⍹○Ⓑ⏛⍁MQ⍙ⓁA∑Y⍢⍎⍬A∫y:⊒≤⍏CG⍞ⓋC⍎⍮f⁷³⍬¹e⍝S⍶³⍟Ⓜ⍳⌼δ①
 </code></pre>
 <p>Ungolfed Node.js code:</p>
