--- a/q/274322.html
+++ b/q/274322.html
@@ -26,16 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>086</td><td>JavaScript Node.js</td><td>240722T131407Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274326#274326">Arnauld</a></td></tr>
+<tr d-ix="0"><td>136</td><td>R</td><td>240722T132927Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274327#274327">Dominic </a></td></tr>
 <tr d-ix="1"><td>139</td><td>Python 3.8 prerelease</td><td>240722T121011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274324#274324">squarero</a></td></tr>
 <tr d-ix="2"><td>049</td><td>JCram</td><td>240722T120018Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274323#274323">Kamila S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 86 bytes</h1>
-<p>Didn't look for any hidden logic in the mapping. So this is just using a lookup table for now.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>c=&gt;(B=Buffer)([226,160,B(`7.&gt;EGZM]U,T&quot;&amp;2RB6VF4?!#)91+;3*:%'-=5/?`)[B(c)[0]%38]+96])+&quot;&quot;
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 136 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>function(x,d=c(2,6,16,-8,-6,16,-8,-9),i=cumsum(c(10292,-50,2*d,-19,d,16,-21,d,16,7,2,19,-13,16,-8)),j=(j=10240:10303)[!j%in%i])c(i,j)[x]
 </code></pre>
-<p><a href="https://tio.run/##JdLPTtRQFAbw/TzF9RJsy5Rh/kBhZtKZpAm6MiREWThpQiktwzDOxbagSFgAQaOgRP4GEDUk6IoNAWNIeJl5AR9h7Me3ufnd75yzOqflLXuxH80vJoMdNRv0Qrvn2zXdsZ2lMAwiQ28Ui5ZZsPKmo0@P5mrjT18@c1@Yz@Xj4qRjTT0Zrj/qM8qFbLU0UOnXBu2Rofq00XB032jk3f7SmJstW66RlbLnq06cCCVssSo9WRGy@3NdmkLO0JuwT3@EZ@kTOKC/wiG9nVrIOX7OUGjS@/A8/Qlu0afwAr0Ft@kP8Cv6M9yhz2FFH8KL9C78mv4BR/QxHNNf4IT@Di/Rl/Ay/Rt@Q9/Bb@kreIW@h9/Rt3CevoEL9AZcpN/DJXoPHqav4RH6ArboI3iU/gOP0b/gMn0AD9E7cq2ayUzMtAI/yS0EK7GujFyoonHPb@p@04uEXROrGSHaQSKiIE6XHT7kRjUNcQGqHeTaau4hNNFiss8WqoHMFXWh/fu72/12kL6aqAite76jpfNrRu8/" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=fY-9TsMwFIX3PkVIVcmGa-Gf4CaRvCB1Y4IwVR2C44CjNEGxI_UReAeWMLCz8yS8DVETQGLodM-9ut_ROa9v3fDxkDsjo6y97nJb10a9974k8ddL2Tfa27ZBByiURhwkMAkkBvIrEgxW6X7v-j3SiFGecCBXFPh5AYQlUBwfOZvEGjiMR8LExGMMlUKVGrmIpowKKvD2rFrZZmV3WCMLFd4ednOez2VQ2EfrXbB4zp03iKYJ2MZn7b0vY_SvBWKjIYYM48UyqI33pnMzN2-nWJYK-QO3_umP1ehmk2Wb2zsIL0IIL0N8wkasUxkdbaYKwzDNbw" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Input as 1-based base64 index; output as UTF8 codepoint.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 139 bytes</h1>
 
