--- a/q/274322.html
+++ b/q/274322.html
@@ -26,32 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>136</td><td>R</td><td>240722T132927Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274327#274327">Dominic </a></td></tr>
+<tr d-ix="0"><td>095</td><td>R</td><td>240722T132927Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274327#274327">Dominic </a></td></tr>
 <tr d-ix="1"><td>139</td><td>Python 3.8 prerelease</td><td>240722T121011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274324#274324">squarero</a></td></tr>
-<tr d-ix="2"><td>049</td><td>JCram</td><td>240722T120018Z</td><td><a href="https://codegolf.stackexchange.com/questions/274322/braille-based-base64/274323#274323">Kamila S</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 136 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 95 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>function(x,i=utf8ToInt(&quot;W%)5UE9YI7$&amp;,&lt;4.&gt;6-=(*0@82B:1AHJ]P`X&quot;))c(i,(j=36:99)[!j%in%i])[x]+10205
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72waMGGpMTiVDOTkHynosTMnJxU26WlJWm6Fjfj00rzkksy8_M0KnQybYFiFiH5nnklGkrhqpqmoa6WkZ7mKmo6NiZ6dma6thpaBg4WRk5Who4eXrEBCRFKmprJGpk6Glm2xmZWlpaa0YpZqpl5qpmxmtEVsdqGBkYGplBrdisrpGSmZ5YUK3AVJBaXpGoYWFnqZOaVhOSHAq3UQHOchqGVoYGmToimJpeyQk5qSUlqUTFUH5SHT6-hlbEZTHN-SQZCb7KGj2tIiGtQsI6StpKOkr6SJh5jjM2tzEzAxkC8sGABhAYA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Input as 1-based base64 index; output as UTF8 codepoint.</p>
+<p>Hard-codes <code>0-9a-z</code> and assigns the remaining codpoints to <code>A-Z+/</code> in order.</p>
+<hr />
+<h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 136 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>function(x,d=c(2,6,16,-8,-6,16,-8,-9),i=cumsum(c(10292,-50,2*d,-19,d,16,-21,d,16,7,2,19,-13,16,-8)),j=(j=10240:10303)[!j%in%i])c(i,j)[x]
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fY-9TsMwFIX3PkVIVcmGa-Gf4CaRvCB1Y4IwVR2C44CjNEGxI_UReAeWMLCz8yS8DVETQGLodM-9ut_ROa9v3fDxkDsjo6y97nJb10a9974k8ddL2Tfa27ZBByiURhwkMAkkBvIrEgxW6X7v-j3SiFGecCBXFPh5AYQlUBwfOZvEGjiMR8LExGMMlUKVGrmIpowKKvD2rFrZZmV3WCMLFd4ednOez2VQ2EfrXbB4zp03iKYJ2MZn7b0vY_SvBWKjIYYM48UyqI33pnMzN2-nWJYK-QO3_umP1ehmk2Wb2zsIL0IIL0N8wkasUxkdbaYKwzDNbw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Input as 1-based base64 index; output as UTF8 codepoint.</p>
+<p>Tries to take advantage of the pattern <code>[2,6,16,-8,-6,16,-8,-9]</code> that is repeated 3 times (first repeat is doubled) in the differences between consecutive <code>0-9a-z</code> codepoints.<br />
+<s>I doubt that this will actually end-up the shortest approach, though</s>.  It didn't.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 139 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda x:x.translate(''.join(chr(i+10208)for i in b'NOPQSWXY[\\^~~~~~~!#)91+;3*:%\'-=5/?7.&gt;EGZM]U_~~~,T&quot;&amp;2RB6VF4~~~~~~~ $(08&lt;@ACDHIJKL'*2))
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM7YoKPqfZBvzPycxNyklUaHCqkKvpCgxrzgnsSRVQ11dLys/M08jOaNII1Pb0MDIwEIzLb9IIVMhM08hSd3PPyAwODwiMjomJq4ODBSVNS0Nta2NtaxUY9R1bU317c317Fzdo3xjQ@OB0johSmpGQU5mYW4mEPV1CioaBhY2Do7OLh6eXt4@6lpGmpr//wMA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://palaiologos.rocks/jcram/jcram.html" rel="nofollow noreferrer">JCram</a>, 49 bytes (SBCS)</h1>
-<pre><code>⁸?∣⊑⍹○Ⓑ⏛⍁MQ⍙ⓁA∑Y⍢⍎⍬A∫y:⊒≤⍏CG⍞ⓋC⍎⍮f⁷³⍬¹e⍝S⍶³⍟Ⓜ⍳⌼δ①
-</code></pre>
-<p>Ungolfed Node.js code:</p>
-<pre><code>s=&gt;s.replace(/./g,c=&gt;&quot;⠁⠃⠉⠙⠑⠋⠛⠓⠊⠚⠅⠇⠍⠝⠕⠏⠟⠗⠎⠞⠥⠧⠺⠭⠽⠵⠴⠂⠆⠒⠲⠢⠖⠶⠦⠔⠌&quot;[&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/&quot;.indexOf(c)]||c)
-</code></pre>
-<p>Maps base64 chars to Braille and leaves everything else intact.</p>
-<p>Alternatively, if mapping a character at a time without processing the whole string is an acceptable solution, then the following solution scores 47 bytes:</p>
-<pre><code>⊥⋆φε∃⍎≠⁷⍔⌽O⁰φ,Ͽ⍄⍜ⓋⒻsw⏦O⌊0?π⁴ⓊRⓆ⌶Ⓒ⟄φsTc⁶ⒶⓇ⍁F⁹Vc⍀
-</code></pre>
 </div>
 
 <table id="st">
