--- a/q/85141.html
+++ b/q/85141.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>057</td><td>x86 realmode COM file</td><td>240722T150955Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/274328#274328">Paolo Bo</a></td></tr>
+<tr d-ix="0"><td>056</td><td>x86 realmode COM file</td><td>240722T150955Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/274328#274328">Paolo Bo</a></td></tr>
 <tr d-ix="1"><td>212</td><td>Chipmunk BASIC</td><td>230906T065315Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/264967#264967">roblogic</a></td></tr>
 <tr d-ix="2"><td>051</td><td>Uiua</td><td>240528T165953Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/273335#273335">noodle p</a></td></tr>
 <tr d-ix="3"><td>140</td><td>C GCC</td><td>230907T170303Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/265018#265018">matteo_c</a></td></tr>
@@ -116,49 +116,50 @@
 <tr d-ix="87"><td>136</td><td>Processing</td><td>160711T180446Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/85183#85183">Cody</a></td></tr>
 <tr d-ix="88"><td>164</td><td>SVG+Javascript</td><td>160711T154406Z</td><td><a href="https://codegolf.stackexchange.com/questions/85141/draw-the-national-flag-of-iceland/85171#85171">nicael</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>x86 real-mode COM file, text mode, 57 bytes</h1>
+<div id="pu0" class="pu"><h1>x86 real-mode COM file, text mode, <strike>57</strike> 56 bytes</h1>
 <p>Because text mode is 80x25, one column of the flag corresponds to two on screen. One could actually save one byte by producing the flag with the wrong aspect ratio.</p>
 <p><a href="https://i.sstatic.net/jtMiyeTF.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/jtMiyeTF.png" alt="Output from FreeDOS session running in DOSBOX" /></a></p>
-<p>Use DEBUG to assemble (remove everything after the semicolon on each line).</p>
+<p>Use DEBUG to assemble (remove everything after the semicolon on each line; I suggest using an <code>ICELAND.SCR</code> file and running <code>DEBUG&lt;ICELAND.SCR</code>).</p>
 <pre><code>a100
 mov ah,b8                      ;100  point to text vram
 mov es,ax                      ;102
 stosw                          ;104  bx=di=0
-mov ax,bx                      ;105  get row and column in ah/al
-cmp al,28                      ;107  column &gt;=40? draw nothing until bh is incremented
-jae 132                        ;109
-cmp al,19                      ;10b  column&gt;=25? draw black
-jae 12f                        ;10d
-sub al,9                       ;10f  compute x&lt;9 ? 8-x : x
-xor al,ff                      ;111
-js 111                         ;113
-xchg ah,al                     ;115  swap row and column
-xor bx,sp                      ;117  execute twice (bx positive, sp=0fffe)
-js 10f                         ;119
-cmp al,ah                      ;11b  compute minimum of al and ah
-jbe 121                        ;11d
-mov al,ah                      ;11f
-cmp al,1                       ;121
-mov ax,cdb                     ;123  red block (character 219) if al=0
-jb 12e                         ;126
-mov ah,f                       ;128  white if al=1
-je 12e                         ;12a
-mov ah,9                       ;12c  otherwise blue
-db a8                          ;12e test al,... to skip 1 byte
-cbw                            ;12f ah=0
-stosw                          ;130 draw two characters
-stosw                          ;131
-inc bx                         ;132 increment (row, column)
-cmp bh,12                      ;133 loop until 18 rows have been drawn
-jne 105                        ;136 
-ret                            ;138
+mov ch,11                      ;105  cx=11ff
+mov ax,bx                      ;107  get row and column in ah/al
+cmp al,28                      ;109  column &gt;=40? draw nothing until bh is incremented
+jae 134                        ;10b
+cmp al,19                      ;10d  column&gt;=25? draw black
+jae 131                        ;10f
+sub al,9                       ;111  compute x&lt;9 ? 8-x : x-9
+xor al,ff                      ;113
+js 113                         ;115
+xchg ah,al                     ;117  swap row and column
+xor bx,sp                      ;119  execute twice (bx positive, sp=0fffe)
+js 111                         ;11b
+cmp al, ah                     ;11d  compute minimum of al and ah
+jbe 123                        ;11f
+mov al, ah                     ;121
+cmp al,1                       ;123
+mov ax,cdb                     ;125  red block (character 219) if al=0
+jb 130                         ;128
+mov ah,f                       ;12a  white if al=1
+je 130                         ;12c
+mov ah,9                       ;12e  otherwise blue
+db a8                          ;130 test al,... to skip 1 byte
+cbw                            ;131 ah=0
+stosw                          ;132 draw two characters
+stosw                          ;133
+inc bx                         ;134 increment (row, column)
+loop 107                       ;135 loop until 18 rows have been drawn
+ret                            ;137 
 
 niceland.com
 rcx
-39
+38
 w
 q
 </code></pre>
+<p>57-&gt;56: use CX + LOOP for iteration instead</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="http://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk BASIC</a>, <s>238</s> <s>235</s> 212 bytes</h1>
 <p>Chipmunk Basic v368b2.02 on MacOS. The RGB range is <code>[0,100]</code>.</p>
