--- a/q/274209.html
+++ b/q/274209.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>055</td><td>C gcc</td><td>240722T012045Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274314#274314">Digital </a></td></tr>
+<tr d-ix="0"><td>054</td><td>C gcc</td><td>240722T012045Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274314#274314">Digital </a></td></tr>
 <tr d-ix="1"><td>009</td><td>MATL</td><td>240717T162439Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274218#274218">Luis Men</a></td></tr>
 <tr d-ix="2"><td>064</td><td>Java</td><td>240719T190530Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274266#274266">swpalmer</a></td></tr>
 <tr d-ix="3"><td>036</td><td>Raku Perl 6 rakudo</td><td>240719T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274258#274258">bb94</a></td></tr>
@@ -47,7 +47,14 @@
 <tr d-ix="18"><td>011</td><td>Charcoal</td><td>240717T213655Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274223#274223">Neil</a></td></tr>
 <tr d-ix="19"><td>036</td><td>APL+WIN</td><td>240717T182357Z</td><td><a href="https://codegolf.stackexchange.com/questions/274209/wait-ascii-was-128-characters-all-along/274220#274220">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 55</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 54</h1>
+
+<p>Non recursive solution:</p>
+<pre class="lang-c prettyprint-override"><code>f(n,a){a=1;for(n=n?:1;n&amp;&amp;(a=isprint(n&amp;127));n&gt;&gt;=7);a;}
+</code></pre>
+<p><a href="https://tio.run/##XZBBTsMwEEX3OcWoqJGtGrCdpi64CQcpWVhOUkYCp6rDAqKcPUyCRCs29vfTnz8z9vcn76c7DP79s27gEPsau4e3Mrki33@dG0JTy4JwfHCFsm13YaEIL8/KhjRlrsB4vmDoWUiVNpzbUJaF4dbZcSIMfRN772ITjxUUMEgBTwIUXSoToI3ItICc0N4Q0rv5WNReQCbJprVU5DCzT2Vbo5RcqnMjdyoz26vMR5skc8sPh4FxGBKA@YmWBI0NDGkCaQHhABG/m65lf9Pxx//kKCtuYbPB3ySAZc2WrVq2rjklrevXsBI3C2Il4DYAK/oOKh2TcfoB" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+<h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, 55</h1>
+<p>Recursive solution is 1 byte longer:</p>
 
 <pre class="lang-c prettyprint-override"><code>g(n){n=n?isprint(n&amp;127)?g(n&gt;&gt;=7):0:1;}f(n){n=n?g(n):0;}
 </code></pre>
