--- a/q/259008.html
+++ b/q/259008.html
@@ -26,24 +26,42 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>036</td><td>K ngn/k</td><td>230730T055022Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/263520#263520">doug</a></td></tr>
-<tr d-ix="1"><td>016</td><td>Jelly</td><td>230310T074138Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259012#259012">Unrelate</a></td></tr>
-<tr d-ix="2"><td>074</td><td>Scala</td><td>230525T104351Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/261224#261224">138 Aspe</a></td></tr>
-<tr d-ix="3"><td>063</td><td>Python</td><td>230310T083101Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259013#259013">JvdV</a></td></tr>
-<tr d-ix="4"><td>134</td><td>Go</td><td>230310T150805Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259022#259022">bigyihsu</a></td></tr>
-<tr d-ix="5"><td>033</td><td>Charcoal</td><td>230311T010149Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259035#259035">Neil</a></td></tr>
-<tr d-ix="6"><td>017</td><td>05AB1E</td><td>230310T100654Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259016#259016">Kevin Cr</a></td></tr>
-<tr d-ix="7"><td>028</td><td>Retina 0.8.2</td><td>230310T094925Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259015#259015">Neil</a></td></tr>
-<tr d-ix="8"><td>055</td><td>JavaScript Node.js</td><td>230310T065841Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259010#259010">tsh</a></td></tr>
+<tr d-ix="0"><td>021</td><td>Haskell + hgl</td><td>240722T164318Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/274330#274330">Wheat Wi</a></td></tr>
+<tr d-ix="1"><td>029</td><td>K ngn/k</td><td>230730T055022Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/263520#263520">doug</a></td></tr>
+<tr d-ix="2"><td>016</td><td>Jelly</td><td>230310T074138Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259012#259012">Unrelate</a></td></tr>
+<tr d-ix="3"><td>074</td><td>Scala</td><td>230525T104351Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/261224#261224">138 Aspe</a></td></tr>
+<tr d-ix="4"><td>063</td><td>Python</td><td>230310T083101Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259013#259013">JvdV</a></td></tr>
+<tr d-ix="5"><td>134</td><td>Go</td><td>230310T150805Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259022#259022">bigyihsu</a></td></tr>
+<tr d-ix="6"><td>033</td><td>Charcoal</td><td>230311T010149Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259035#259035">Neil</a></td></tr>
+<tr d-ix="7"><td>017</td><td>05AB1E</td><td>230310T100654Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259016#259016">Kevin Cr</a></td></tr>
+<tr d-ix="8"><td>028</td><td>Retina 0.8.2</td><td>230310T094925Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259015#259015">Neil</a></td></tr>
+<tr d-ix="9"><td>055</td><td>JavaScript Node.js</td><td>230310T065841Z</td><td><a href="https://codegolf.stackexchange.com/questions/259008/language-word-checker/259010#259010">tsh</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, <s>43</s> <s>41</s> 36 bytes</h1>
-<pre><code>{~^{(0&gt;)_,/x+/:1-2*&amp;2 2\-y}/[0;x]?0}
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, 21 bytes</h1>
+<pre><code>cP$rX&quot;[AB]/r[AC]/r?|&quot;
 </code></pre>
-<p><a href="https://ngn.codeberg.page/k#eJxdjL0OgjAYRffvKWpNKAhNS8eSgG3D0J2NKjKIixP+BEPg2UUTE+p4cu65nRzn4xjyPGoSNsRMplTsAoGEo6+J1TwbDgWfABgYrRSilOaoa6+388Jar1kb43ujzJqV/vG9fyxolJcr5Wntr5ex+Tv3agd2L9MmmENbJAQz53BENluLJJentr88UQpQyRgj7IiFUob4G+IMf/5xVDBZIQFQzh2pan6AN6dkRzw=" rel="nofollow noreferrer">Try it online!</a></p>
-<p>-2 bytes : Better lookup<br/>
--5 bytes : Even better thanks to @ngn</p>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8FNxczcgvyiEoXC0sSczLTM1BSFgKLUnNKUVC6oRMDS0pI0XYvtabbJASpFEUrRjk6x-kXRjs5A0r5GCSJ7c1JuYmaegq1CSj6XgkJuvIJGQZGCjUKaJpCnoBCtoOTs5OioBObogDhOTnCOk7MzkoyzozOc4-jsiFAGZCPJOCErc0TiOMFlYiEuW7AAQgMA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h1>No regex, 32 bytes</h1>
+<pre class="lang-haskell prettyprint-override"><code>x=py$xay&quot;AB&quot;&lt;*x&lt;*xay&quot;AC&quot;&lt;*x
+</code></pre>
+<pre><code>cP x
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8FNxczcgvyiEoXC0sSczLTM1BSFgKLUnNKUVC6oRMDS0pI0XYubShW2BZUqFYmVSo5OSjZaFUAEYjuD2FxptskBChVQlZNyEzPzFGwVUvK5FBRy4xU0CooUbBTSNIE8BYVoBSVnJ0dHJTBHB8RxcoJznJydkWScgYbDOI7OjghlQDaSjBOyMkckjhNcJhbisgULIDQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h1>Reflection</h1>
+<ul>
+<li>There should be a shortcut for <code>cP&lt;rX</code>.</li>
+<li><code>(&lt;*?)</code> and <code>(?*&gt;)</code> have the wrong type they are <code>t m -&gt; t m -&gt; t m</code>, but the two input types do not need to be the same.</li>
+</ul>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>18</s> <s>15</s> 16 bytes</h1>
+<div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, <s>43</s> <s>41</s> <s>36</s> 29 bytes</h1>
+<pre><code>~&amp;/0{(0&gt;)_,/x+/:1-2*&amp;2 2\-y}/
+</code></pre>
+<p><a href="https://ngn.codeberg.page/k#eJxdjDsPgjAURvf7K+o14SE0LR2vCdg2DN3ZrEEGcXHCRzRGfrtoYkIdT853vp7GSMhnIsu0zcU9E1RwtYoUU54/XgJAgDVaM855yfrudD5MbMycjbWht9rOWZsfX4brhFYHudaBNuF6Gtu/86D24DZUtNGYuCqPUXiPabxYOkaS9t1wvLECoKEMGfrYQU0JfkNc4+cf00pQwxRAPfZxs5U7eAOesERh" rel="nofollow noreferrer">Try it online!</a></p>
+<p>-2 bytes : Better lookup<br/>
+-5 bytes : Even better thanks to @ngn<br/>
+-7 bytes : Fairly sizeable overhaul by @ngn (go team ngn/k!!)</p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s>18</s> <s>15</s> 16 bytes</h1>
 <pre><code>,UċƤ&quot;⁾CBḤ«ƑJ&gt;LḂ$
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/18n9Ej3sSVKjxr3OTs93LHk0OpjE73sfB7uaFL5/3D3lsPtj5rWRP7/7@zk6Mjl7OTkxOXk7AxkOTs6czk6gQhnRycuR0cgywnEBfKcQbIgMZAwAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -57,7 +75,7 @@
             &gt;LḂ$    Also, reject any odd-length inputs.
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala</a>, 74 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala</a>, 74 bytes</h1>
 <p>Golfed version. <a href="https://tio.run/##bZBRT8MgFIXf@yuufVghdma@1rEEeDJRX4xPy2JwwsRga4At3WZ/ewU6XTQlaUg/zj335Li1MKJvXt7l2sO90DUcs2wnLKgK3Wnnl/xN2FV5W3tMFqxpjBQ1EDiuhZPwDGQB3m5l1yuSEGqral8egha184IXE4XC7@U1xl@ovSAFKyaHxWyg00Bv0tCDNmnmQMis6wFepYKPkAUJu3EVUGvFfvnora43K1zBU619zJBBODthwEvno5ELNIZG6QUA5ZTmZUqIy1/GWaJKGPcXMzaCGeejak75CKYs4X8bKadj1pSOidmoRXDg4zHOzoniLF2qsYCQLkFimE/PDeFTbUNxVrqtiV0qpK98E7srYYZPis9QuDc10grQj5JEw3yXgwwbIW/D8uFpGOqy@GVd/w0" rel="nofollow noreferrer">Try it online!</a></p>
 <pre class="lang-scala prettyprint-override"><code>f={case(x::y,z)=&gt;(x&lt;'C'&amp;f(y,z+1))|(x!='B'&amp;z&gt;0&amp;f(y,z-1));case(Nil,z)=&gt;z==0}
 </code></pre>
@@ -95,7 +113,7 @@
 
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Python, 63 bytes</h1>
+<div id="pu4" class="pu"><h1>Python, 63 bytes</h1>
 <pre><code>lambda x:bool(match('^([AB](?1)*[AC])*$',x))
 from regex import*
 </code></pre>
@@ -106,13 +124,13 @@ from regex import*
 <p>See an online <a href="https://regex101.com/r/7z1fFZ/1" rel="nofollow noreferrer">demo</a>. I was unsure if we were allowed to simply post the pattern for 18 bytes.</p>
 <hr />
 <h1>Excel (ms365), 120 bytes</h1>
-<p><a href="https://i.stack.imgur.com/vNx5W.png" rel="nofollow noreferrer"><img src="https://i.stack.imgur.com/vNx5W.png" alt="enter image description here" /></a></p>
+<p><a href="https://i.sstatic.net/vNx5W.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/vNx5W.png" alt="enter image description here" /></a></p>
 <p>Formula in <code>B1</code>:</p>
 <pre><code>=REDUCE(A1,ROW(A:A),LAMBDA(a,b,IFERROR(REPLACE(a,MIN(IFERROR(FIND({&quot;AC&quot;,&quot;BA&quot;,&quot;BC&quot;},a),&quot;&quot;)),2,),SUBSTITUTE(a,&quot;AA&quot;,))))=&quot;&quot;
 </code></pre>
 <p>The idea here is to 1st replace any of the compound words that are not a copy of itself. If not found, try to replace 'AA'. Check if the final result after the last iteration is empty.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>125</s> 134 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://go.dev" rel="nofollow noreferrer">Go</a>, <s>125</s> 134 bytes</h1>
 <pre class="lang-go prettyprint-override"><code>import.&quot;strings&quot;
 func f(s string)bool{l:=s
 for _,e:=range[]string{&quot;BA&quot;,&quot;AC&quot;,&quot;BC&quot;,&quot;AA&quot;}{l=ReplaceAll(l,e,&quot;&quot;)}
@@ -134,7 +152,7 @@ return l==&quot;&quot;||l!=s&amp;&amp;f(l)} // ok if empty, not ok if non-empty
 <li>+9 bytes for matching <code>AACC</code>, using a different approach.</li>
 </ul>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 33 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 33 bytes</h1>
 <pre><code>⊞υＳＦυＦABＦACＦ⌕Ａι⁺κλ⊞υΦι∧⁻ξμ⁻ξ⊕μ¬⌊υ
 </code></pre>
 <p><a href="https://tio.run/##PU7NCoMwDL77FMFTAt0TeOoEwcNGwScQ7WZZGkdtx96@qwPNJd9P8vFNyximdeScTdoWTAp6eac4xODkiURN9VgDYCL471pf6xO2B@yczJoZnQLDacOXAiYiOCI7x9GG3dYy481Jufkq8KTgJL1MwXor0c7oaZ@mMqVExPsa9x/nky89ip6z1m2bLx/@AQ" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -157,7 +175,7 @@ return l==&quot;&quot;||l!=s&amp;&amp;f(l)} // ok if empty, not ok if non-empty
 </code></pre>
 <p>See whether we were able to end up with the empty string.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 17 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 17 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>„AB„ACâIgиæõδ.;õå
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//UcM8RycQ4Xx4kWf6hR2Hlx3eem6LnvXhrYeX/v/v5OzkDAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##S0oszvifnFiiYKeQnJ@SqpdfnJiUmapgY6Pg6u/GZa@k8KhtkoKS/f9HDfMcnUCE8@FFnunWF3YcXnZ467ktetaHtx5e@l@HC6SaqzwjMydVoSg1MUUhM48rJZ9LQUE/v6BEH2IolEKzx0ZBBaw2L/W/k6OjM5eTs5Mzl6MTkOUI5jpBxYCiIHkgpQQGXM5OQOToCCScnIAqnIEsZ5AuZ0eghCNQnTOIBdTIBQA" rel="nofollow noreferrer">verify all test cases</a>. The test suite contains a <code>;</code> (halve) after the <code>g</code> to speed it up substantially.</p>
@@ -176,7 +194,7 @@ return l==&quot;&quot;||l!=s&amp;&amp;f(l)} // ok if empty, not ok if non-empty
 </code></pre>
 <p>Minor note: for an explicit empty string input, it'll do the following steps: <code>„AB„ACâIgи</code>=<code>[]</code> → <code>æ</code>=<code>[[]]</code> → <code>õδ.;</code>=<code>[&quot;&quot;]</code> → <code>õå</code>=<code>1</code> (truthy). This is different than if no input is provided, since <code>õδ.;</code> would then keep <code>[[]]</code> and the result is falsey: <a href="https://tio.run/##yy9OTMpM/f//UcM8RycQ4Xx4kWf6hR22h5fZHt56boueNZA6vFTn/38lMAAA" rel="nofollow noreferrer">try it online with explicit empty string input</a> vs <a href="https://tio.run/##yy9OTMpM/f//UcM8RycQ4Xx4kWf6hR22h5fZHt56boueNZA6vFTn/38A" rel="nofollow noreferrer">try it online without any input</a>.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 28 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 28 bytes</h1>
 <pre><code>^((A|B)|(?&lt;-2&gt;A|C))*$(?(2)^)
 </code></pre>
 <p><a href="https://tio.run/##FYkhDoAwEAR93wHJHQmmmkB2V/CLBgQCgyDI/v1ozWQm817f/Zwx2n5EMUOlV9uWOa@ocp8G2yx78QgRSCKZKDUTlMAOgQloxp6t1C9/" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Explanation:</p>
@@ -196,7 +214,7 @@ return l==&quot;&quot;||l!=s&amp;&amp;f(l)} // ok if empty, not ok if non-empty
 </code></pre>
 <p>without leaving any unmatched leading <code>A</code>s or <code>B</code>s.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 55 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 55 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>f=([x,...y],z)=&gt;x?x&lt;'C'&amp;f(y,-~z)|x!='B'&amp;z&gt;0&amp;f(y,~-z):!z
 </code></pre>
